# gcal-tool

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml  requirements.txt
src/gcal_tool/: main.py
src/gcal_tool/parser/: main.py  parse_script.py  parser.py  schedule.json
