[project]
name = "gcal-tool"
version = "0.1.0"
description = "A short description of your project"
authors = [{name = "Alex Grant", email = "alexander-x-grant@gmail.com"}]
dependencies = [
    "pytest",
    "black",
    "isort",
    "ruff",
    "pre-commit",
]
requires-python = ">=3.12,<3.13"

[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
lint.select = ["E", "F", "B", "I"]
lint.ignore = []
line-length = 88
target-version = "py312"
